--- a/SalarySurveyProject.ipynb
+++ b/SalarySurveyProject.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "SalarySurveyProject.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN09gxOXlZ73UMdENCetOJK",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMEzkY+/vIgXLBkah52WWyk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,18 +79,343 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wNlY_CAON84J"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 590
+        },
+        "id": "wNlY_CAON84J",
+        "outputId": "24030ad7-2217-4f1b-9bc5-5ed35e15724e"
       },
       "source": [
         "salary.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Timestamp</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Position</th>\n",
+              "      <th>Total years of experience</th>\n",
+              "      <th>Years of experience in Germany</th>\n",
+              "      <th>Seniority level</th>\n",
+              "      <th>Your main technology / programming language</th>\n",
+              "      <th>Other technologies/programming languages you use often</th>\n",
+              "      <th>Yearly brutto salary (without bonus and stocks) in EUR</th>\n",
+              "      <th>Yearly bonus + stocks in EUR</th>\n",
+              "      <th>Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country</th>\n",
+              "      <th>Annual bonus+stocks one year ago. Only answer if staying in same country</th>\n",
+              "      <th>Number of vacation days</th>\n",
+              "      <th>Employment status</th>\n",
+              "      <th>Сontract duration</th>\n",
+              "      <th>Main language at work</th>\n",
+              "      <th>Company size</th>\n",
+              "      <th>Company type</th>\n",
+              "      <th>Have you lost your job due to the coronavirus outbreak?</th>\n",
+              "      <th>Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week</th>\n",
+              "      <th>Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>24/11/2020 11:14:15</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Munich</td>\n",
+              "      <td>Software Engineer</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>TypeScript</td>\n",
+              "      <td>Kotlin, Javascript / Typescript</td>\n",
+              "      <td>80000.0</td>\n",
+              "      <td>5000</td>\n",
+              "      <td>75000.0</td>\n",
+              "      <td>10000</td>\n",
+              "      <td>30</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>51-100</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>24/11/2020 11:14:16</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Backend Developer</td>\n",
+              "      <td>7</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>Ruby</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>80000.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>82000.0</td>\n",
+              "      <td>5000</td>\n",
+              "      <td>28</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>101-1000</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>24/11/2020 11:14:21</td>\n",
+              "      <td>29.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Software Engineer</td>\n",
+              "      <td>12</td>\n",
+              "      <td>6</td>\n",
+              "      <td>Lead</td>\n",
+              "      <td>Javascript / Typescript</td>\n",
+              "      <td>Javascript / Typescript, Docker</td>\n",
+              "      <td>120000.0</td>\n",
+              "      <td>120000</td>\n",
+              "      <td>100000.0</td>\n",
+              "      <td>100000</td>\n",
+              "      <td>30</td>\n",
+              "      <td>Self-employed (freelancer)</td>\n",
+              "      <td>Temporary contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>101-1000</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>24/11/2020 11:15:24</td>\n",
+              "      <td>28.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Frontend Developer</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Junior</td>\n",
+              "      <td>Javascript</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>54000.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>24</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>51-100</td>\n",
+              "      <td>Startup</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>24/11/2020 11:15:46</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Backend Developer</td>\n",
+              "      <td>17</td>\n",
+              "      <td>6</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>C# .NET</td>\n",
+              "      <td>.NET, SQL, AWS, Docker</td>\n",
+              "      <td>62000.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>62000.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>29</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>101-1000</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Timestamp  ...  Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR\n",
+              "0  24/11/2020 11:14:15  ...                                                NaN                                                                      \n",
+              "1  24/11/2020 11:14:16  ...                                                NaN                                                                      \n",
+              "2  24/11/2020 11:14:21  ...                                                NaN                                                                      \n",
+              "3  24/11/2020 11:15:24  ...                                                NaN                                                                      \n",
+              "4  24/11/2020 11:15:46  ...                                                NaN                                                                      \n",
+              "\n",
+              "[5 rows x 23 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yRBS3RSaOAj5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 335
+        },
+        "id": "yRBS3RSaOAj5",
+        "outputId": "4d6eefe0-49e7-4264-b907-74cac566b41a"
+      },
+      "source": [
+        "salary.describe()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Yearly brutto salary (without bonus and stocks) in EUR</th>\n",
+              "      <th>Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country</th>\n",
+              "      <th>Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>1226.000000</td>\n",
+              "      <td>1.253000e+03</td>\n",
+              "      <td>8.850000e+02</td>\n",
+              "      <td>373.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>32.509788</td>\n",
+              "      <td>8.027904e+07</td>\n",
+              "      <td>6.322459e+05</td>\n",
+              "      <td>12.967828</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>5.663804</td>\n",
+              "      <td>2.825061e+09</td>\n",
+              "      <td>1.680508e+07</td>\n",
+              "      <td>15.275174</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>20.000000</td>\n",
+              "      <td>1.000100e+04</td>\n",
+              "      <td>1.100000e+04</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>29.000000</td>\n",
+              "      <td>5.880000e+04</td>\n",
+              "      <td>5.500000e+04</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>32.000000</td>\n",
+              "      <td>7.000000e+04</td>\n",
+              "      <td>6.500000e+04</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>35.000000</td>\n",
+              "      <td>8.000000e+04</td>\n",
+              "      <td>7.500000e+04</td>\n",
+              "      <td>30.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>69.000000</td>\n",
+              "      <td>1.000000e+11</td>\n",
+              "      <td>5.000000e+08</td>\n",
+              "      <td>40.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               Age  ...  Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week\n",
+              "count  1226.000000  ...                                         373.000000                                                \n",
+              "mean     32.509788  ...                                          12.967828                                                \n",
+              "std       5.663804  ...                                          15.275174                                                \n",
+              "min      20.000000  ...                                           0.000000                                                \n",
+              "25%      29.000000  ...                                           0.000000                                                \n",
+              "50%      32.000000  ...                                           0.000000                                                \n",
+              "75%      35.000000  ...                                          30.000000                                                \n",
+              "max      69.000000  ...                                          40.000000                                                \n",
+              "\n",
+              "[8 rows x 4 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eVFW-nbAYbso"
       },
       "source": [
         ""
