--- a/SalarySurveyProject.ipynb
+++ b/SalarySurveyProject.ipynb
@@ -6,7 +6,7 @@
       "name": "SalarySurveyProject.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMEzkY+/vIgXLBkah52WWyk",
+      "authorship_tag": "ABX9TyM3PunuWhCQA/kuM/xp8Dwy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import seaborn as sns"
+        "import seaborn as sns # se importan las librerias necesarias para el EDA"
       ],
       "execution_count": 1,
       "outputs": []
@@ -52,7 +52,7 @@
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount(\"/content/drive/\")"
+        "drive.mount(\"/content/drive/\") # se conecta con el drive personal"
       ],
       "execution_count": 2,
       "outputs": [
@@ -71,7 +71,7 @@
         "id": "Q9Y7qbnxM6h9"
       },
       "source": [
-        "salary = pd.read_csv(\"/content/drive/MyDrive/PYTHON ESENCIALS/IT Salary Survey EU  2020.csv\")"
+        "salary = pd.read_csv(\"/content/drive/MyDrive/PYTHON ESENCIALS/IT Salary Survey EU  2020.csv\") # carga el archivo desde el drive ya conectado (poner ruta)"
       ],
       "execution_count": 3,
       "outputs": []
@@ -87,7 +87,7 @@
         "outputId": "24030ad7-2217-4f1b-9bc5-5ed35e15724e"
       },
       "source": [
-        "salary.head()"
+        "salary.head() # Primeros registros"
       ],
       "execution_count": 6,
       "outputs": [
@@ -415,7 +415,334 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eVFW-nbAYbso"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 625
+        },
+        "id": "eVFW-nbAYbso",
+        "outputId": "4f8fcd4d-e534-4f5a-9060-e0626650a73b"
+      },
+      "source": [
+        "salary.tail() # últimos registros"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Timestamp</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Position</th>\n",
+              "      <th>Total years of experience</th>\n",
+              "      <th>Years of experience in Germany</th>\n",
+              "      <th>Seniority level</th>\n",
+              "      <th>Your main technology / programming language</th>\n",
+              "      <th>Other technologies/programming languages you use often</th>\n",
+              "      <th>Yearly brutto salary (without bonus and stocks) in EUR</th>\n",
+              "      <th>Yearly bonus + stocks in EUR</th>\n",
+              "      <th>Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country</th>\n",
+              "      <th>Annual bonus+stocks one year ago. Only answer if staying in same country</th>\n",
+              "      <th>Number of vacation days</th>\n",
+              "      <th>Employment status</th>\n",
+              "      <th>Сontract duration</th>\n",
+              "      <th>Main language at work</th>\n",
+              "      <th>Company size</th>\n",
+              "      <th>Company type</th>\n",
+              "      <th>Have you lost your job due to the coronavirus outbreak?</th>\n",
+              "      <th>Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week</th>\n",
+              "      <th>Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1248</th>\n",
+              "      <td>18/01/2021 15:05:50</td>\n",
+              "      <td>31.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Backend Developer</td>\n",
+              "      <td>9</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>Java</td>\n",
+              "      <td>Python, Javascript / Typescript, Java / Scala,...</td>\n",
+              "      <td>70000.0</td>\n",
+              "      <td>72000</td>\n",
+              "      <td>70000.0</td>\n",
+              "      <td>72000</td>\n",
+              "      <td>26</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>51-100</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1249</th>\n",
+              "      <td>18/01/2021 17:46:02</td>\n",
+              "      <td>33.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Researcher/ Consumer Insights Analyst</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>consumer analysis</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>60000.0</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>48000.0</td>\n",
+              "      <td>2500</td>\n",
+              "      <td>unlimited</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>1000+</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1250</th>\n",
+              "      <td>18/01/2021 23:20:35</td>\n",
+              "      <td>39.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Munich</td>\n",
+              "      <td>IT Operations Manager</td>\n",
+              "      <td>15</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Lead</td>\n",
+              "      <td>PHP</td>\n",
+              "      <td>Python, C/C++, Javascript / Typescript, Java /...</td>\n",
+              "      <td>110000.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>90000.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>28</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>101-1000</td>\n",
+              "      <td>eCommerce</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1251</th>\n",
+              "      <td>19/01/2021 10:17:58</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Saarbrücken</td>\n",
+              "      <td>Frontend Developer</td>\n",
+              "      <td>7</td>\n",
+              "      <td>7</td>\n",
+              "      <td>Middle</td>\n",
+              "      <td>JavaScript</td>\n",
+              "      <td>Javascript / Typescript, Docker, HTML, CSS; Ad...</td>\n",
+              "      <td>38350.0</td>\n",
+              "      <td>40950</td>\n",
+              "      <td>33800.0</td>\n",
+              "      <td>36400</td>\n",
+              "      <td>27</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>German</td>\n",
+              "      <td>101-1000</td>\n",
+              "      <td>Product</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1252</th>\n",
+              "      <td>19/01/2021 12:01:11</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>DevOps</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Middle</td>\n",
+              "      <td>yaml</td>\n",
+              "      <td>Python, AWS, Kubernetes, Docker, terraform, an...</td>\n",
+              "      <td>65000.0</td>\n",
+              "      <td>6500</td>\n",
+              "      <td>40000.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>30</td>\n",
+              "      <td>Full-time employee</td>\n",
+              "      <td>Unlimited contract</td>\n",
+              "      <td>English</td>\n",
+              "      <td>51-100</td>\n",
+              "      <td>Startup</td>\n",
+              "      <td>No</td>\n",
+              "      <td>30.0</td>\n",
+              "      <td>600</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Timestamp  ...  Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR\n",
+              "1248  18/01/2021 15:05:50  ...                                                NaN                                                                      \n",
+              "1249  18/01/2021 17:46:02  ...                                                  0                                                                      \n",
+              "1250  18/01/2021 23:20:35  ...                                                NaN                                                                      \n",
+              "1251  19/01/2021 10:17:58  ...                                                  0                                                                      \n",
+              "1252  19/01/2021 12:01:11  ...                                                600                                                                      \n",
+              "\n",
+              "[5 rows x 23 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2fqxFw0Ibk1p",
+        "outputId": "5a1d1c9f-4c70-44b0-9001-c7037cbcb098"
+      },
+      "source": [
+        "salary.shape # filas y columnas"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1253, 23)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bSFvhEwhb0tQ",
+        "outputId": "f3cb70fd-185d-4872-b280-379cb1e13cdf"
+      },
+      "source": [
+        "salary.columns # que campos hay"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Timestamp', 'Age', 'Gender', 'City', 'Position ',\n",
+              "       'Total years of experience', 'Years of experience in Germany',\n",
+              "       'Seniority level', 'Your main technology / programming language',\n",
+              "       'Other technologies/programming languages you use often',\n",
+              "       'Yearly brutto salary (without bonus and stocks) in EUR',\n",
+              "       'Yearly bonus + stocks in EUR',\n",
+              "       'Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country',\n",
+              "       'Annual bonus+stocks one year ago. Only answer if staying in same country',\n",
+              "       'Number of vacation days', 'Employment status', 'Сontract duration',\n",
+              "       'Main language at work', 'Company size', 'Company type',\n",
+              "       'Have you lost your job due to the coronavirus outbreak?',\n",
+              "       'Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week',\n",
+              "       'Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KDadxuy8cIrb",
+        "outputId": "7b0748e5-5004-427e-869e-299a83dab5bf"
+      },
+      "source": [
+        "salary.nunique() # cuantos datos por campo"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Timestamp                                                                                                                  1248\n",
+              "Age                                                                                                                          40\n",
+              "Gender                                                                                                                        3\n",
+              "City                                                                                                                        119\n",
+              "Position                                                                                                                    148\n",
+              "Total years of experience                                                                                                    48\n",
+              "Years of experience in Germany                                                                                               53\n",
+              "Seniority level                                                                                                              24\n",
+              "Your main technology / programming language                                                                                 256\n",
+              "Other technologies/programming languages you use often                                                                      562\n",
+              "Yearly brutto salary (without bonus and stocks) in EUR                                                                      201\n",
+              "Yearly bonus + stocks in EUR                                                                                                168\n",
+              "Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country                    147\n",
+              "Annual bonus+stocks one year ago. Only answer if staying in same country                                                    131\n",
+              "Number of vacation days                                                                                                      45\n",
+              "Employment status                                                                                                            11\n",
+              "Сontract duration                                                                                                             3\n",
+              "Main language at work                                                                                                        14\n",
+              "Company size                                                                                                                  5\n",
+              "Company type                                                                                                                 63\n",
+              "Have you lost your job due to the coronavirus outbreak?                                                                      10\n",
+              "Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week                            23\n",
+              "Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR      59\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jyCU0LSJdFuS"
       },
       "source": [
         ""
