--- a/SalarySurveyProject.ipynb
+++ b/SalarySurveyProject.ipynb
@@ -6,7 +6,7 @@
       "name": "SalarySurveyProject.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3PunuWhCQA/kuM/xp8Dwy",
+      "authorship_tag": "ABX9TyM6b4FFoN/g85dN1cn+ZZPE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -661,7 +661,7 @@
         "outputId": "f3cb70fd-185d-4872-b280-379cb1e13cdf"
       },
       "source": [
-        "salary.columns # que campos hay"
+        "salary.columns # que campos tiene"
       ],
       "execution_count": 10,
       "outputs": [
@@ -700,7 +700,7 @@
         "outputId": "7b0748e5-5004-427e-869e-299a83dab5bf"
       },
       "source": [
-        "salary.nunique() # cuantos datos por campo"
+        "salary.nunique() # cuantos datos por campo (no incluye vacíos)"
       ],
       "execution_count": 11,
       "outputs": [
@@ -742,7 +742,268 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jyCU0LSJdFuS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jyCU0LSJdFuS",
+        "outputId": "e0348ef0-a8a6-486f-a1ff-8e44890a1420"
+      },
+      "source": [
+        "salary[\"Gender\"].unique() # que valores hay por columna. Vacío lo identifica como \"nan\""
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Male', 'Female', nan, 'Diverse'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8OBA5pXbe5D1",
+        "outputId": "f7955b99-ce22-4ff4-9da0-3ad656a29c67"
+      },
+      "source": [
+        "salary[\"Company size\"].unique()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['51-100', '101-1000', '11-50', '1000+', nan, 'up to 10'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vw-cnUO8gBts",
+        "outputId": "88131c3a-ec24-44bc-a78e-449b67f19f5f"
+      },
+      "source": [
+        "salary.isnull().sum() # cuantos registros estan vacios por cada campo"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Timestamp                                                                                                                    0\n",
+              "Age                                                                                                                         27\n",
+              "Gender                                                                                                                      10\n",
+              "City                                                                                                                         0\n",
+              "Position                                                                                                                     6\n",
+              "Total years of experience                                                                                                   16\n",
+              "Years of experience in Germany                                                                                              32\n",
+              "Seniority level                                                                                                             12\n",
+              "Your main technology / programming language                                                                                127\n",
+              "Other technologies/programming languages you use often                                                                     157\n",
+              "Yearly brutto salary (without bonus and stocks) in EUR                                                                       0\n",
+              "Yearly bonus + stocks in EUR                                                                                               424\n",
+              "Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country                   368\n",
+              "Annual bonus+stocks one year ago. Only answer if staying in same country                                                   639\n",
+              "Number of vacation days                                                                                                     68\n",
+              "Employment status                                                                                                           17\n",
+              "Сontract duration                                                                                                           29\n",
+              "Main language at work                                                                                                       16\n",
+              "Company size                                                                                                                18\n",
+              "Company type                                                                                                                25\n",
+              "Have you lost your job due to the coronavirus outbreak?                                                                     20\n",
+              "Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week                          880\n",
+              "Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR    791\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rDhEmPkuh-Z0"
+      },
+      "source": [
+        "basic = salary.drop(['Yearly bonus + stocks in EUR',\n",
+        "       'Annual brutto salary (without bonus and stocks) one year ago. Only answer if staying in the same country',\n",
+        "       'Annual bonus+stocks one year ago. Only answer if staying in same country',\n",
+        "       'Number of vacation days', 'Employment status', 'Сontract duration',\n",
+        "       'Main language at work', 'Company size', 'Company type',\n",
+        "       'Have you lost your job due to the coronavirus outbreak?',\n",
+        "       'Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week',\n",
+        "       'Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR'], axis=1) # quitando campos que no se van a usar"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 362
+        },
+        "id": "2cwbtQRxlXkU",
+        "outputId": "042c04a8-efe0-4318-8db2-7e4d476b74d4"
+      },
+      "source": [
+        "basic.head() # mostrando la nueva base con los campos principales"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Timestamp</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Gender</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Position</th>\n",
+              "      <th>Total years of experience</th>\n",
+              "      <th>Years of experience in Germany</th>\n",
+              "      <th>Seniority level</th>\n",
+              "      <th>Your main technology / programming language</th>\n",
+              "      <th>Other technologies/programming languages you use often</th>\n",
+              "      <th>Yearly brutto salary (without bonus and stocks) in EUR</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>24/11/2020 11:14:15</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Munich</td>\n",
+              "      <td>Software Engineer</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>TypeScript</td>\n",
+              "      <td>Kotlin, Javascript / Typescript</td>\n",
+              "      <td>80000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>24/11/2020 11:14:16</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Backend Developer</td>\n",
+              "      <td>7</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>Ruby</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>80000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>24/11/2020 11:14:21</td>\n",
+              "      <td>29.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Software Engineer</td>\n",
+              "      <td>12</td>\n",
+              "      <td>6</td>\n",
+              "      <td>Lead</td>\n",
+              "      <td>Javascript / Typescript</td>\n",
+              "      <td>Javascript / Typescript, Docker</td>\n",
+              "      <td>120000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>24/11/2020 11:15:24</td>\n",
+              "      <td>28.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Frontend Developer</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Junior</td>\n",
+              "      <td>Javascript</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>54000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>24/11/2020 11:15:46</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>Berlin</td>\n",
+              "      <td>Backend Developer</td>\n",
+              "      <td>17</td>\n",
+              "      <td>6</td>\n",
+              "      <td>Senior</td>\n",
+              "      <td>C# .NET</td>\n",
+              "      <td>.NET, SQL, AWS, Docker</td>\n",
+              "      <td>62000.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Timestamp  ...  Yearly brutto salary (without bonus and stocks) in EUR\n",
+              "0  24/11/2020 11:14:15  ...                                            80000.0     \n",
+              "1  24/11/2020 11:14:16  ...                                            80000.0     \n",
+              "2  24/11/2020 11:14:21  ...                                           120000.0     \n",
+              "3  24/11/2020 11:15:24  ...                                            54000.0     \n",
+              "4  24/11/2020 11:15:46  ...                                            62000.0     \n",
+              "\n",
+              "[5 rows x 11 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tXUF-E4UleU9"
       },
       "source": [
         ""
