--- a/SalarySurveyProject.ipynb
+++ b/SalarySurveyProject.ipynb
@@ -6,8 +6,7 @@
       "name": "SalarySurveyProject.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6b4FFoN/g85dN1cn+ZZPE",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOCXUBGCiFMESh7DLdG9mOv"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ChristianOLopez/PythonEDA/blob/main/SalarySurveyProject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "jvH0IlHULiAi"
@@ -36,7 +25,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import seaborn as sns # se importan las librerias necesarias para el EDA"
+        "import seaborn as sns # importando las librerias necesarias para el EDA"
       ],
       "execution_count": 1,
       "outputs": []
@@ -52,7 +41,7 @@
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount(\"/content/drive/\") # se conecta con el drive personal"
+        "drive.mount(\"/content/drive/\") # conectando con el drive personal"
       ],
       "execution_count": 2,
       "outputs": [
@@ -71,7 +60,7 @@
         "id": "Q9Y7qbnxM6h9"
       },
       "source": [
-        "salary = pd.read_csv(\"/content/drive/MyDrive/PYTHON ESENCIALS/IT Salary Survey EU  2020.csv\") # carga el archivo desde el drive ya conectado (poner ruta)"
+        "salary = pd.read_csv(\"/content/drive/MyDrive/PYTHON ESENCIALS/IT Salary Survey EU  2020.csv\") # cargando el archivo desde el drive ya conectado (poner ruta)"
       ],
       "execution_count": 3,
       "outputs": []
@@ -300,7 +289,7 @@
         "outputId": "4d6eefe0-49e7-4264-b907-74cac566b41a"
       },
       "source": [
-        "salary.describe()"
+        "salary.describe() # datos estadísticos"
       ],
       "execution_count": 7,
       "outputs": [
@@ -700,7 +689,7 @@
         "outputId": "7b0748e5-5004-427e-869e-299a83dab5bf"
       },
       "source": [
-        "salary.nunique() # cuantos datos por campo (no incluye vacíos)"
+        "salary.nunique() # cuantos valores por campo (no incluye vacíos)"
       ],
       "execution_count": 11,
       "outputs": [
@@ -1003,7 +992,47 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tXUF-E4UleU9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tXUF-E4UleU9",
+        "outputId": "7cf99b08-5a31-4b59-c529-f3a1d81e0f2e"
+      },
+      "source": [
+        "basic.info() # estructura de la base"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1253 entries, 0 to 1252\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column                                                  Non-Null Count  Dtype  \n",
+            "---  ------                                                  --------------  -----  \n",
+            " 0   Timestamp                                               1253 non-null   object \n",
+            " 1   Age                                                     1226 non-null   float64\n",
+            " 2   Gender                                                  1243 non-null   object \n",
+            " 3   City                                                    1253 non-null   object \n",
+            " 4   Position                                                1247 non-null   object \n",
+            " 5   Total years of experience                               1237 non-null   object \n",
+            " 6   Years of experience in Germany                          1221 non-null   object \n",
+            " 7   Seniority level                                         1241 non-null   object \n",
+            " 8   Your main technology / programming language             1126 non-null   object \n",
+            " 9   Other technologies/programming languages you use often  1096 non-null   object \n",
+            " 10  Yearly brutto salary (without bonus and stocks) in EUR  1253 non-null   float64\n",
+            "dtypes: float64(2), object(9)\n",
+            "memory usage: 107.8+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "THI1Smjf7Sdg"
       },
       "source": [
         ""
