--- a/SalarySurveyProject.ipynb
+++ b/SalarySurveyProject.ipynb
@@ -6,7 +6,7 @@
       "name": "SalarySurveyProject.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCXUBGCiFMESh7DLdG9mOv"
+      "authorship_tag": "ABX9TyOi0iY7S2Tvh+8MNx/obWpM"
     },
     "kernelspec": {
       "name": "python3",
@@ -37,7 +37,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WNr2vdkqMh96",
-        "outputId": "cc96ade5-b4d5-45a7-f213-4d75022c2767"
+        "outputId": "be44be4a-339a-4230-c424-8dc7427dde05"
       },
       "source": [
         "from google.colab import drive\n",
@@ -70,15 +70,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 590
+          "height": 581
         },
         "id": "wNlY_CAON84J",
-        "outputId": "24030ad7-2217-4f1b-9bc5-5ed35e15724e"
+        "outputId": "d99ca30b-05f9-42dd-c4ce-72a263a76cf3"
       },
       "source": [
         "salary.head() # Primeros registros"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -283,15 +283,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 335
+          "height": 314
         },
         "id": "yRBS3RSaOAj5",
-        "outputId": "4d6eefe0-49e7-4264-b907-74cac566b41a"
+        "outputId": "02b85915-092f-44e7-9a72-9d4295c3dec6"
       },
       "source": [
         "salary.describe() # datos estadísticos"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +397,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -406,15 +406,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 625
+          "height": 615
         },
         "id": "eVFW-nbAYbso",
-        "outputId": "4f8fcd4d-e534-4f5a-9060-e0626650a73b"
+        "outputId": "cad86173-4282-4eb3-d82b-0c1e49023f64"
       },
       "source": [
         "salary.tail() # últimos registros"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +610,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -621,12 +621,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2fqxFw0Ibk1p",
-        "outputId": "5a1d1c9f-4c70-44b0-9001-c7037cbcb098"
+        "outputId": "4ea78196-24cf-4bb7-b280-fd4d34ef6775"
       },
       "source": [
         "salary.shape # filas y columnas"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -647,12 +647,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bSFvhEwhb0tQ",
-        "outputId": "f3cb70fd-185d-4872-b280-379cb1e13cdf"
+        "outputId": "59df4b69-91ec-4e11-c19e-402609e33749"
       },
       "source": [
         "salary.columns # que campos tiene"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +675,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -686,12 +686,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KDadxuy8cIrb",
-        "outputId": "7b0748e5-5004-427e-869e-299a83dab5bf"
+        "outputId": "037afcc1-4838-41c0-8ee5-4c6657707846"
       },
       "source": [
         "salary.nunique() # cuantos valores por campo (no incluye vacíos)"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +724,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -735,12 +735,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jyCU0LSJdFuS",
-        "outputId": "e0348ef0-a8a6-486f-a1ff-8e44890a1420"
+        "outputId": "cb751600-8f95-428e-c044-d9fd5aa03e7b"
       },
       "source": [
         "salary[\"Gender\"].unique() # que valores hay por columna. Vacío lo identifica como \"nan\""
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -761,12 +761,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8OBA5pXbe5D1",
-        "outputId": "f7955b99-ce22-4ff4-9da0-3ad656a29c67"
+        "outputId": "dd10aed3-c4b2-42ee-89eb-88991c128227"
       },
       "source": [
         "salary[\"Company size\"].unique()"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -788,12 +788,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vw-cnUO8gBts",
-        "outputId": "88131c3a-ec24-44bc-a78e-449b67f19f5f"
+        "outputId": "64438b1d-9479-4008-99a3-c2af5f3954a1"
       },
       "source": [
         "salary.isnull().sum() # cuantos registros estan vacios por cada campo"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +826,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -843,9 +843,9 @@
         "       'Main language at work', 'Company size', 'Company type',\n",
         "       'Have you lost your job due to the coronavirus outbreak?',\n",
         "       'Have you been forced to have a shorter working week (Kurzarbeit)? If yes, how many hours per week',\n",
-        "       'Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR'], axis=1) # quitando campos que no se van a usar"
+        "       'Have you received additional monetary support from your employer due to Work From Home? If yes, how much in 2020 in EUR'], axis=1) # quitando campos que no se van a usar y creando la nueva base basic"
       ],
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -853,15 +853,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 362
+          "height": 306
         },
         "id": "2cwbtQRxlXkU",
-        "outputId": "042c04a8-efe0-4318-8db2-7e4d476b74d4"
+        "outputId": "a3735c0e-41f4-4a9b-8f63-d7b77630e015"
       },
       "source": [
         "basic.head() # mostrando la nueva base con los campos principales"
       ],
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -985,7 +985,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -996,12 +996,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tXUF-E4UleU9",
-        "outputId": "7cf99b08-5a31-4b59-c529-f3a1d81e0f2e"
+        "outputId": "0a99e69d-870f-4b74-b0c3-e25a48a1e168"
       },
       "source": [
         "basic.info() # estructura de la base"
       ],
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1037,7 +1037,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     }
   ]
